change master -> content for Github Action

--- a/.github/workflows/update_json.yml
+++ b/.github/workflows/update_json.yml
@@ -1,8 +1,8 @@
-name: Update Quote LIst
+name: Update Quote List
 
 on:
   workflow_dispatch:
-    branches: [ master ]
+    branches: [ content ]
 
 jobs:
   update-index-json:
